--- a/src/content/pages/contact.mdx
+++ b/src/content/pages/contact.mdx
@@ -7,9 +7,11 @@ seo:
 ---
 import MarginNote from "../../components/MarginNote.astro"
 import MarginFigure from "../../components/MarginFigure.astro"
+import dirk from '../../assets/generated/dirk_transparent.png';
+import dirkDark from '../../assets/generated/dirk_dark.png';
 
 
-<MarginFigure src="/dirk_transparent.png" srcDark="/dirk_dark.png" alt="a rolling die">
+<MarginFigure src={dirk} srcDark={dirkDark} alt="Dirk Brockmann">
 **Your instructor:** Dirk Brockmann.
 </MarginFigure>
 Here's some information about your instructor, in case you need to get in touch and keep being updated about the course.
