--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -9,7 +9,6 @@ image:
 showHeader: true
 ---
 import Quote from "../components/Quote.astro"
-import MarginFigure from "../components/MarginFigure.astro"
 import Figure from "../components/Figure.astro"
 import complexity from '../assets/generated/complexity_transparent.png';
 import complexityDark from '../assets/generated/complexity_dark.png';
@@ -33,9 +32,9 @@ import swarmDark from '../assets/generated/swarm_dark.png';
 fields, breaching boundaries, crossing lines and connecting phenomena
 </Figure>
 
-<MarginFigure src={rollingDie} srcDark={rollingDieDark} alt="a rolling die">
+<Figure src={rollingDie} srcDark={rollingDieDark} alt="a rolling die" margin={true}>
 **A rolling die:** A complex system.
-</MarginFigure>
+</Figure>
 This course is about understanding complex dynamic phenomena in biological, physical and social systems.
 The focus is on biological systems but with a particular emphasis on how phenomena
 observed in biological systems are related to systems outside of biology. 
@@ -54,9 +53,9 @@ AI is about predicting things we don't understand. Complexity is about
 understanding things we can't predict.
 </Quote>
 
-<MarginFigure src={metronomes} srcDark={metronomesDark} alt="metronomes on a board">
+<Figure src={metronomes} srcDark={metronomesDark} margin={true} alt="metronomes on a board">
 **How to synchronize:** All you need are five metronomes, a board and two empty cans.
-</MarginFigure>
+</Figure>
 Most of these concepts and phenomena occur and are applied across a broad range of fields. 
 Here's a list of those that will be covered in the course:
 
@@ -72,9 +71,9 @@ Here's a list of those that will be covered in the course:
 
 ## Complexity Explorables
 
-<MarginFigure src={network} srcDark={networkDark} alt="Network">
+<Figure src={network} srcDark={networkDark} alt="Network" margin={true}>
 **Complex Networks:** A topic discussed in this course.
-</MarginFigure>
+</Figure>
 When you click on a topic above, you'll be directed to a 
 collection of [Complexity Explorables](www.complexity-explorables.org) 
 that illustrates one of more of the topics.
@@ -89,9 +88,9 @@ Take a quit break and [explore some here](https://www.complexity-explorables.org
 
 In the seminar, every student will give a presentation on one of the explorables. 
 
-<MarginFigure src={sandpile} srcDark={sandpileDark} alt="Sandpile">
+<Figure src={sandpile} srcDark={sandpileDark} alt="Sandpile" margin={true}>
 **A growing sandpile:** An example of self-organized criticality.
-</MarginFigure>
+</Figure>
 The lecture will also cover a number of basic theoretical modeling methods, analysis tools 
 and techniques that are required to understand and appreciate the richness and beauty of complex systems.
 
@@ -107,9 +106,9 @@ specific research project from the range of topics discussed in the lecture.
 Each student will pick a **Complexity Explorable** and study the system it 
 describes and related papers in more detail. 
 
-<MarginFigure src={tippingpoint} srcDark={tippingpointDark} alt="tipping point.">
+<Figure src={tippingpoint} srcDark={tippingpointDark} alt="tipping point." margin={true}>
 **Tipping points:** Irreversible processes occur frequently in complex systems.
-</MarginFigure>
+</Figure>
 Each student will have to give a presentation on the explorable. 
 The presentations will be collected on the [Seminar page](/seminar).
 
@@ -128,9 +127,9 @@ Don't worry, you are going to have a blast.
 
 ## Requirements
 
-<MarginFigure src={swarm} srcDark={swarmDark} alt="A swarm.">
+<Figure src={swarm} srcDark={swarmDark} alt="A swarm." margin={true}>
 **Collective Behavior:** How do birds flock? We will discuss it in this course.
-</MarginFigure>
+</Figure>
 The basic requirements for the successful completion of the 
 course is a basic knowledge of calculus and very basic knowledge of 
 differential equations. Programming skills are not required but helpful.
