first working version

--- a/src/content/tutorials/stochastic-processes.mdx
+++ b/src/content/tutorials/stochastic-processes.mdx
@@ -2,7 +2,7 @@
 id: stochastic-processes
 title: 'Random Walks & Stochastic Processes'
 description: 'This tutorial provides as brief overview of random walks and stochastic processes,  stochastic differential equations, the central limit theorem and some other basic stuff.'
-publishDate: 'Jan 02 2025' 
+publishDate: '2025-06-03'
 seo:
   image:
     src: '/complexity.png'
