--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,22 +8,22 @@ image:
   alt: "Complex Systems"
 showHeader: true
 ---
-import Quote from "../components/Quote.astro"
-import Figure from "../components/Figure.astro"
-import complexity from '../assets/generated/complexity_transparent.png';
 import complexityDark from '../assets/generated/complexity_dark.png';
-import rollingDie from '../assets/generated/rolling_die_transparent.png';
-import rollingDieDark from '../assets/generated/rolling_die_dark.png';
-import metronomes from '../assets/generated/metronomes_transparent.png';
+import complexity from '../assets/generated/complexity_transparent.png';
 import metronomesDark from '../assets/generated/metronomes_dark.png';
-import network from '../assets/generated/network_transparent.png';
+import metronomes from '../assets/generated/metronomes_transparent.png';
 import networkDark from '../assets/generated/network_dark.png';
-import sandpile from '../assets/generated/sandpile_transparent.png';
+import network from '../assets/generated/network_transparent.png';
+import rollingDieDark from '../assets/generated/rolling_die_dark.png';
+import rollingDie from '../assets/generated/rolling_die_transparent.png';
 import sandpileDark from '../assets/generated/sandpile_dark.png';
-import tippingpoint from '../assets/generated/tippingpoint_transparent.png';
-import tippingpointDark from '../assets/generated/tippingpoint_dark.png';
-import swarm from '../assets/generated/swarm_transparent.png';
+import sandpile from '../assets/generated/sandpile_transparent.png';
 import swarmDark from '../assets/generated/swarm_dark.png';
+import swarm from '../assets/generated/swarm_transparent.png';
+import tippingpointDark from '../assets/generated/tippingpoint_dark.png';
+import tippingpoint from '../assets/generated/tippingpoint_transparent.png';
+import Figure from "../components/Figure.astro";
+import Quote from "../components/Quote.astro";
 
 ## What is this course about?
 
@@ -94,12 +94,18 @@ In the seminar, every student will give a presentation on one of the explorables
 The lecture will also cover a number of basic theoretical modeling methods, analysis tools 
 and techniques that are required to understand and appreciate the richness and beauty of complex systems.
 
+## The Tutorials
+
+On this site you will find a number of tutorials that cover topics that are useful to understanding some models
+and phenomena discussed in the course. Mostly these tutorials explain some basic mathematical concepts and methods that are used in the course. They are provided for those of you who are not familiar with the concepts or need a refresher. 
+You can find the tutorials in the [tutorials section](/tutorials). 
+
 ## Language
 
 The course language is **English**. This means the lectures will be given in English 
 and the students given there seminar talk in English, too.
  
-## The Seminar
+{/* ## The Seminar
 
 The seminar is designed for students to focus more deeply and individually on a 
 specific research project from the range of topics discussed in the lecture. 
@@ -123,7 +129,7 @@ with [netlogo](https://ccl.northwestern.edu/netlogo/), a free programming
 environment for agent based simulations. Netlogo is easy to 
 learn also useful for students who have never been exposed to computer programming. 
 
-Don't worry, you are going to have a blast.
+Don't worry, you are going to have a blast. */}
 
 ## Requirements
 
