added kuramoto branch

--- a/src/content/pages/index.mdx
+++ b/src/content/pages/index.mdx
@@ -1,31 +1,30 @@
 ---
-layout: "../layouts/PageLayout.astro"
+title: "Complex Systems in Biology"
 seo:
-  title: "Hi!"
+  title: "What is this course about?"
   description: "A course on Complex Systems in Biology at TU Dresden."
-image:
-  src: "/complexity.jpg" 
-  alt: "Complex Systems"
+  image:
+    src: "/complexity_transparent.png" 
+    alt: "Complex Systems"
 showHeader: true
 ---
-import complexityDark from '../assets/generated/complexity_dark.png';
-import complexity from '../assets/generated/complexity_transparent.png';
-import metronomesDark from '../assets/generated/metronomes_dark.png';
-import metronomes from '../assets/generated/metronomes_transparent.png';
-import networkDark from '../assets/generated/network_dark.png';
-import network from '../assets/generated/network_transparent.png';
-import rollingDieDark from '../assets/generated/rolling_die_dark.png';
-import rollingDie from '../assets/generated/rolling_die_transparent.png';
-import sandpileDark from '../assets/generated/sandpile_dark.png';
-import sandpile from '../assets/generated/sandpile_transparent.png';
-import swarmDark from '../assets/generated/swarm_dark.png';
-import swarm from '../assets/generated/swarm_transparent.png';
-import tippingpointDark from '../assets/generated/tippingpoint_dark.png';
-import tippingpoint from '../assets/generated/tippingpoint_transparent.png';
-import Figure from "../components/Figure.astro";
-import Quote from "../components/Quote.astro";
+import complexityDark from '../../assets/generated/complexity_dark.png';
+import complexity from '../../assets/generated/complexity_transparent.png';
+import metronomesDark from '../../assets/generated/metronomes_dark.png';
+import metronomes from '../../assets/generated/metronomes_transparent.png';
+import networkDark from '../../assets/generated/network_dark.png';
+import network from '../../assets/generated/network_transparent.png';
+import rollingDieDark from '../../assets/generated/rolling_die_dark.png';
+import rollingDie from '../../assets/generated/rolling_die_transparent.png';
+import sandpileDark from '../../assets/generated/sandpile_dark.png';
+import sandpile from '../../assets/generated/sandpile_transparent.png';
+import swarmDark from '../../assets/generated/swarm_dark.png';
+import swarm from '../../assets/generated/swarm_transparent.png';
+import tippingpointDark from '../../assets/generated/tippingpoint_dark.png';
+import tippingpoint from '../../assets/generated/tippingpoint_transparent.png';
+import Figure from "../../components/Figure.astro";
+import Quote from "../../components/Quote.astro";
 
-## What is this course about?
 
 <Figure src={complexity} srcDark={complexityDark} alt="Complexity.">
 **Complexity:** A science like a fungus, connecting all sorts of traditional
