--- a/src/content/tutorials/bifurcation-theory.mdx
+++ b/src/content/tutorials/bifurcation-theory.mdx
@@ -3,6 +3,7 @@ id: bifurcation-theory
 title: 'Bifurcation Analysis of One-Dimensional Dynamical Systems'
 description: 'This tutorial introduces the concept of bifurcation analysis in one-dimensional dynamical systems, focusing on the bifurcation diagram and the stability of fixed points.'
 publishDate: '2025-06-02'
+draft: true
 seo:
   image:
     src: '/complexity.png'
