--- a/src/content/tutorials/kuramoto-model.mdx
+++ b/src/content/tutorials/kuramoto-model.mdx
@@ -5,7 +5,7 @@ description: 'This tutorial explores the Kuramoto model, a mathematical model of
 publishDate: '2025-06-02'
 seo:
   image:
-    src: '/complexity.png'
+    src: '/complexity_transparent.png'
     alt: Project preview
 ---
 
@@ -25,8 +25,6 @@ import Fig2 from '../../content/figures/kuramoto-model/figure2';
 import Fig3 from '../../content/figures/kuramoto-model/figure3';
 import Fig4 from '../../content/figures/kuramoto-model/figure4';
 import Fig5 from '../../content/figures/kuramoto-model/figure5';
-
-
 
 
 In this script we discuss the [**Kuramoto Model**](https://en.wikipedia.org/wiki/Kuramoto_model). It is probably the most famous model for the emergence of synchronization in phase coupled oscillators. It was introduced in 1975 by [**Yoshiki Kuramoto**](https://en.wikipedia.org/wiki/Yoshiki_Kuramoto).
