--- a/src/content/tutorials/random-numbers.mdx
+++ b/src/content/tutorials/random-numbers.mdx
@@ -3,6 +3,7 @@ id: random-numbers
 title: 'Random Variables & Probability Distributions'
 description: 'This tutorial captures the basics of random variables and probability theory. It is really very basic and only explores the very fundamental aspects one should know.'
 publishDate: '2025-06-02'
+draft: true
 seo:
   image:
     src: '/complexity.png'
