--- a/src/content/tutorials/logistic-map.mdx
+++ b/src/content/tutorials/logistic-map.mdx
@@ -3,6 +3,7 @@ id: logistic-map
 title: 'The logistic map'
 description: 'This tutorial explores the properties of the logistic map, a classic example of a one-dimensional dynamical system, focusing on its bifurcation diagram and chaotic behavior.'
 publishDate: '2025-06-02'
+draft: true
 seo:
   image:
     src: '/complexity.png'
