finalzid the template

--- a/src/content/pages/contact.mdx
+++ b/src/content/pages/contact.mdx
@@ -1,5 +1,5 @@
 ---
-showHeader: true
+showHeader: false
 title: Contact Information
 seo:
   title: Contact Information
@@ -8,7 +8,7 @@ seo:
 import dirkDark from '../../assets/generated/dirk_dark.png';
 import dirk from '../../assets/generated/dirk_transparent.png';
 import Figure from "../../components/Figure.astro";
-import MarginNote from "../../components/MarginNote.astro";
+import MarginNote from "../../components/MarginNote/Note.astro";
 
 
 
@@ -21,7 +21,7 @@ Here's some information about your instructor, in case you need to get in touch 
 
 I've set up an email address specifically for communication about this course. The best way to reach me (and get a response) is by using this email:
 
-[brockmannscomplexitycourse@gmail.com](mailto:brockmannscomplexitycourse@gmail.com)
+[complex-systems-bsc-ws25@tu-dresden.de](mailto:complex-systems-bsc-ws25@tu-dresden.de)
 
 If you need to get in touch with me concerning other matters, contact my assistant **Franziska Schäfer** at
 SynoSys (Center Synergy of Systems):
