--- a/src/content/pages/index.mdx
+++ b/src/content/pages/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Complex Systems in Biology"
 seo:
-  title: "What is this course about?"
+  title: "Welcome..."
   description: "A course on Complex Systems in Biology at TU Dresden."
   image:
     src: "/complexity_transparent.png" 
@@ -25,6 +25,18 @@ import tippingpoint from '../../assets/generated/tippingpoint_transparent.png';
 import Figure from "../../components/Figure.astro";
 import Quote from "../../components/Quote.astro";
 
+... to the website of the module **Introduction to Complex Systems** 
+for the winter term 2025/26 (M0500-31W20). 
+Below is a brief overview of the topics covered 
+in this course. The course is part of the 
+[Bachelor Degree program Molecular Biology and Biotechnology](https://tu-dresden.de/studium/vor-dem-studium/studienangebot/sins/sins_studiengang?autoid=313)
+and is offered as an elective compulsory module.
+
+A summary of the key parameters of the course 
+(structure, schedule, location, etc.) is provided
+in the [TL;DR](/tldr) section.
+
+## What is this course about?
 
 <Figure src={complexity} srcDark={complexityDark} alt="Complexity.">
 **Complexity:** A science like a fungus, connecting all sorts of traditional
@@ -34,17 +46,20 @@ fields, breaching boundaries, crossing lines and connecting phenomena
 <Figure src={rollingDie} srcDark={rollingDieDark} alt="a rolling die" margin={true}>
 **A rolling die:** A complex system.
 </Figure>
-This course is about understanding complex dynamic phenomena in biological, physical and social systems.
+This course offers an overview and basic understanding of 
+complex dynamic phenomena in biological, physical and social systems.
 The focus is on biological systems but with a particular emphasis on how phenomena
 observed in biological systems are related to systems outside of biology. 
-For example: Are the dynamic patterns observed in flocking birds and schooling
+**For example:** Are the dynamic patterns observed in flocking birds and schooling
 fish related to pedestrian dynamics, or politica polarization? What are
 the underlying principles?
 
-Complexity science is about unraveling these underlying principles that drive a complex phenomenon 
+Complexity science is about unraveling these underlying principles that 
+drive a complex phenomenon 
 and trying to construct models based on these underlying principles that
 can reproduce the basic properties of a system with as few ingredients as possible. 
-Complex systems come in different flavors and can be associated with different fundamental 
+Complex systems come in different flavors and can be associated with different 
+fundamental 
 phenomena and concepts each of which will be covered in the course.
 
 <Quote author="Dirk Brockmann" cite="TU Dresden">
@@ -85,26 +100,19 @@ The Complexity Explorables will play a prominent role in the course.
 
 Take a quit break and [explore some here](https://www.complexity-explorables.org).
 
-In the seminar, every student will give a presentation on one of the explorables. 
+## Structure of the Course
 
-<Figure src={sandpile} srcDark={sandpileDark} alt="Sandpile" margin={true}>
-**A growing sandpile:** An example of self-organized criticality.
-</Figure>
-The lecture will also cover a number of basic theoretical modeling methods, analysis tools 
-and techniques that are required to understand and appreciate the richness and beauty of complex systems.
+The course has three components:
 
-## The Tutorials
+- **Lecture:** Theoretical foundations, seminal models and key concepts.
+- **Seminar:** Presentation and discussion of selected Complexity Explorables.
+- **Lab session:** Implementation of computer simulations of models of complex systems.
 
-On this site you will find a number of tutorials that cover topics that are useful to understanding some models
-and phenomena discussed in the course. Mostly these tutorials explain some basic mathematical concepts and methods that are used in the course. They are provided for those of you who are not familiar with the concepts or need a refresher. 
-You can find the tutorials in the [tutorials section](/tutorials). 
+### The lectures
 
-## Language
+The lectures will capture the topics listed above. 
 
-The course language is **English**. This means the lectures will be given in English 
-and the students given there seminar talk in English, too.
- 
-{/* ## The Seminar
+### The Seminar
 
 The seminar is designed for students to focus more deeply and individually on a 
 specific research project from the range of topics discussed in the lecture. 
@@ -119,7 +127,7 @@ The presentations will be collected on the [Seminar page](/seminar).
 
 **Explorables are picked on a first come first serve basis.**
 
-## The Lab Course
+### The Lab Course
 
 Computer simulations are a central analysis tool for understanding complex 
 dynamic phenomena in biology. In the [lab course](/lab) 
@@ -128,13 +136,38 @@ with [netlogo](https://ccl.northwestern.edu/netlogo/), a free programming
 environment for agent based simulations. Netlogo is easy to 
 learn also useful for students who have never been exposed to computer programming. 
 
-Don't worry, you are going to have a blast. */}
+Don't worry, you are going to have a blast.
+
+
+<Figure src={sandpile} srcDark={sandpileDark} alt="Sandpile" margin={true}>
+**A growing sandpile:** An example of self-organized criticality.
+</Figure>
+The lecture will also cover a number of basic theoretical modeling methods, analysis tools 
+and techniques that are required to understand and appreciate the richness and beauty of complex systems.
+
+## The Tutorials
+
+On this site you will find a number of interactivetutorials that cover 
+topics that are 
+useful to understanding some models
+and phenomena discussed in the course. Mostly these tutorials explain 
+some basic mathematical concepts and methods that are used in the course. 
+They are provided for those of you who are not familiar with the concepts or 
+need a refresher. 
+You can find the tutorials in the [tutorials section](/tutorials). 
+
+## Language
+
+The course language is **English**. This means the lectures will be given in English 
+and the students given there seminar talk in English, too.
+ 
 
 ## Requirements
 
 <Figure src={swarm} srcDark={swarmDark} alt="A swarm." margin={true}>
 **Collective Behavior:** How do birds flock? We will discuss it in this course.
 </Figure>
+
 The basic requirements for the successful completion of the 
 course is a basic knowledge of calculus and very basic knowledge of 
 differential equations. Programming skills are not required but helpful.
