--- a/src/content/pages/tutorial-index.mdx
+++ b/src/content/pages/tutorial-index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Tutorials"
 description: "Tutorials on diverse topics relevant for the Introduction to Complex Systems Course."
-showHeader: true
+showHeader: false
 ---
 
 
